# docker-vue-rust

./: README.md  docker-compose.yml
backend/: Cargo.toml
backend/src/: config.rs  main.rs
backend/src/api/: film.rs  mod.rs
backend/src/model/: film.rs
db/initdb/: 1_createdb.sql  2_restoredb.sh
frontend/: Dockerfile
frontend/src/: App.vue
frontend/src/components/: Films.vue
nginx/: nginx.conf
