[package]
name = "api"
version = "0.1.0"
authors = ["Kazumasa Yamamoto <yamamoto_kazumasa@uniquevision.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0"
actix-web = "2.0"
config = "0.10.1"
deadpool-postgres = "0.5.0"
dotenv = "0.15.0"
failure = "0.1.6"
serde = { version = "1.0.104", features = ["derive"] }
tokio-postgres = "0.5.1"
